# cmb_foregrounds_diffusion

./: 00_model.ipynb  01_map_cuts.ipynb  02_visualization.ipynb  03_compute_moments.ipynb  CLAUDE.md  README.md  ds_utils.py  preprocessing.ipynb  preprocessing.py  ps_utils.py  pyproject.toml  sample.py  sample_slurm.sh  scratch.ipynb  stack_tsz_based_on_snr.ipynb  train.py  train_slurm.sh
data/low_pass/2mJy/: .gitattributes  cut_maps_RES_256_ANG_X_6.0 deg_2mJy_lp.npy  cut_maps_RES_256_ANG_X_6.0 deg_2mJy_lp_tsz3.npy  new_samples_16_cib_tsz3_2mJy_zero_norm_6x6_w_au_lp.npy
docs/: 01_map_cuts.ipynb  03_compute_moments-sum.ipynb  notebook_summaries.md  paper_code_inconsistencies.md  potential_extensions.md  scratch.ipynb  stack_tsz_based_on_snr.ipynb
docs/tutorials/: 01_halo_catalogue.ipynb  02_masking.ipynb  03_patch_extraction.ipynb  04_model_and_training.ipynb  05_sampling.ipynb  06_power_spectra.ipynb  07_higher_order_stats.ipynb  08_morphology_and_histograms.ipynb  09_tsz_stacking.ipynb
docs/tutorials/.ipynb_checkpoints/: 01_halo_catalogue-checkpoint.ipynb  02_masking-checkpoint.ipynb  03_patch_extraction-checkpoint.ipynb
foregrounds_diffusion/: __init__.py  flatmaps.py  gen_masks_from_maps.py  get_cluster_source_mask_for_agora.py  mask_and_filter_maps.py  mask_filter_from_maps.py  preprocessing.py  ps_utils.py  sample.py  statistics.py  test.py
foregrounds_diffusion/redundant/: ds_utils.py  flatsky.py  gen_masks_from_maps.py  masks.py  ps_utils.py  sample.py
